fix: permit /actuator/health/** so Render health check sub-paths are accessible